--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -275,7 +275,7 @@ Full-Width Styles
   display: block;
   position: absolute;
   top:0;
-  right: 40px;
+  right: 0px;
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
@@ -327,7 +327,7 @@ Full-Width Styles
 
 .zip_download_link {
   display: block;
-  float: right;
+  float: left;
   width: 90px;
   height:70px;
   text-indent: -5000px;
@@ -338,10 +338,6 @@ Full-Width Styles
 
 .zip_download_link:hover {
   background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
 }
 
 #main_content_wrap {
