--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -332,12 +332,12 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
+  background: url(https://cloud.githubusercontent.com/assets/13187260/8513670/8510af6e-2329-11e5-9c12-0c068f5ef217.png) no-repeat bottom left;
   margin-left: 30px;
 }
 
 .zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
+  background: url(https://cloud.githubusercontent.com/assets/13187260/8513670/8510af6e-2329-11e5-9c12-0c068f5ef217.png) no-repeat top left;
 }
 
 #main_content_wrap {
